Trying to fix banner alignment

--- a/style.css
+++ b/style.css
@@ -118,3 +118,10 @@ button{
   background-color: #efefef;
   text-align: center;
 }
+
+img {
+	
+	padding:0px;
+	margin:0px;
+	
+}
